# simple-music-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
.elasticbeanstalk/: config.yml
.github/workflows/: deploy-to-aws.yaml  docker-build.yaml  docker-compose-build.yaml
backend/: Dockerfile  celery.py  pyproject.toml  secrets.py  settings.py
backend/backend/: settings.py  urls.py
backend/simpleMusicService/: apps.py  models.py  serializers.py  urls.py  views.py
backend/simpleMusicService/migrations/: 0001_initial.py
backend/simple_music_service/: apps.py  serializers.py  urls.py
backend/templates/: documentation.html
frontend/: .dockerignore   Dockerfile  package.json
frontend/src/style/: SongPlayer.css
nginx/: nginx.conf
simple_music_service/: admin.py  archive_data.py  exceptions.py  feature_flags.py  filters.py  managers.py  mixins.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  test_factories.py  tests.py  urls.py  views.py
simple_music_service/migrations/: 0002_artist_remove_song_artist_song_artist.py  0003_song_user_alter_artist_name_alter_song_location.py  0004_playlist.py  0005_rating_rating_unique_song_user_rate.py  0006_comment.py  0007_rename_created_date_comment_created_date_time_and_more.py  0008_song_lyrics.py  0009_databaseaudit.py  0010_applicationuser_alter_comment_user_and_more.py  0011_artist_deleted_date_time_comment_deleted_date_time_and_more.py  0012_songplaylist_artistsong.py  0013_songplaylist_artistsong_transfer_data.py  0014_alter_artist_name_artist_unique_artist_name.py
