[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PashkovichKaterina <pashkovichkate@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.21.2"
django-cors-headers = "^3.11.0"
djangorestframework-simplejwt = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
